Fixed the banner image, now is responsive both on mobile and desktop. Further tweaking is needed. Refined the content holder for the main header information.

--- a/main.css
+++ b/main.css
@@ -18,25 +18,29 @@ body {
 	border-bottom: 2px solid #D1B78F;
 	margin-bottom: 5%;
 	padding: 5% 7%;
-}
-
-.section-wrapper p {
-	font-size: 2em;
+	font-size: 1rem;
 }
 /***********************/
 
+.get-address {
+	text-align: center;
+	min-height: 50vh;
+}
+.get-address a {
+	display: inline-block;
+	margin-top: 5%;
+	font-size: 3rem;
+}
 
 /* Landing page */
 
 .hero-image {
-	max-width: 100%;
-	max-height: 33%;
-}
-
-.hero-image img {
-	max-width: 100%;
-	max-height: 33%;
-	margin: 0 0 10% 0;
+	display: inline-block;
+	width: 100%;
+	height: 50vh;
+	background-image: url(images/vineWall.jpg);
+	background-size: cover;
+	background-position: center;
 }
 
 .content-wrapper {
@@ -46,27 +50,25 @@ body {
 
 .content-wrapper h1 {
 	font-family: 'Alex Brush', cursive;
-	font-size: 7em;
-	margin-bottom: 2%;
+	font-size: 4rem;
 	font-weight: normal;
 }
 
 h2 {
 	font-family: 'Alex Brush', cursive;
-	font-size: 5em;
+	font-size: 5rem;
 	font-weight: normal;
 	margin-bottom: 10%;
 }
 
-.content-wrapper h3 {
+.content-wrapper span {
 	font-weight: lighter;
-	font-size: 3.5em;
-	margin-bottom: 3%;
+	font-size: 3.5rem;
 }
 
 .content-wrapper p {
-	font-size: 2.5em;
-	margin-bottom: 3%;
+	font-size: 2.5rem;
+	
 }
 /*************************/
 
@@ -112,7 +114,7 @@ nav {
 
 nav a {
 	text-decoration: none;
-	font-size: 3em;
+	font-size: 3rem;
 	border-left: .5px solid #D1B78F;
 	font-weight: lighter;
 	padding: 1%;
@@ -124,5 +126,6 @@ nav a {
 
 	nav {
 		padding: 1%;
+		display: none;
 	}
 }
